* Fri Apr 9 2010 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (3.1.1-1)
- No more mask/unmask for Talker/Listener.
- puserdrivernidaqmx.cpp: Surpress warning during stopPulseGen().
- nmrspectrumbase_impl.h: Fix for coarse resolution.
- transaction_signal.h: Fix memory leaks.

* Wed Apr 7 2010 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (3.1.0-1)
- transaction.h, xnode.h: Apply lock-free software transactional memory to most of all internals.

* Wed Jan 6 2010 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (3.0.0-1)
- dso.cpp, nmrpulse.cpp: Averaging restarts when a clear button is invoked.
- pulserdriver.cpp: Fix phase cycling for a stimulated echo. 
- The first stable release for 3.0.

* Mon Dec 14 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.8-1)
- gpib.cpp: Fix for NI488.2.

* Fri Nov 27 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.7-2)
- graphpaintergl.cpp: Fix drawing strategy for mac.

* Sun Nov 22 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.7-1)
- Portfile for MacPorts.
- now NI488 can be also used as a GPIB driver.
- x86_64.
- graphpaintergl.cpp: uses QString::toWCharArray instead of the complex iconv().

* Wed Nov 11 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.6-1)
- recordreader.cpp: changes # of threads to 1 for reading records.

* Mon Nov 2 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.5-1)
- Gets rid of XRawThermometer.

* Sat Oct 31 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.4-1)
- Lakeshore340: reading of raw sensor values.

* Thu Oct 29 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.3-1)
- Rearrange UI designs.

* Wed Oct 28 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.1-1)
- No more interval in QTimer's event during processing the main-thread envents.

* Thu Oct 22 2009 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (2.9.0-1)
- The first working version with Qt4/Kde4.
- cmake.
- Core modules are moved to modules/core.
- Rearranged UIs.
