@@ -4,6 +4,7 @@
 - puserdrivernidaqmx.cpp: Surpress warning during stopPulseGen().
 - nmrspectrumbase_impl.h: Fix for coarse resolution.
 - transaction_signal.h: Fix memory leaks.
+- graph.cpp: Fix auto frequency for axes.
 
 * Wed Apr 7 2010 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
 - (3.1.0-1)
